// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-position match input "START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 2,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 3,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 2`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 3,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
hello "hello" bar" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 12,
    "lineNumber": 2,
    "startPos": 7,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
hello bar" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 2,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello "hello" bar" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 16,
    "lineNumber": 1,
    "startPos": 11,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello "hello"" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 16,
    "lineNumber": 1,
    "startPos": 11,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello bar" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 9,
    "lineNumber": 1,
    "startPos": 4,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 9,
    "lineNumber": 1,
    "startPos": 4,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello "hello"" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 12,
    "lineNumber": 1,
    "startPos": 7,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello 'hello'" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 12,
    "lineNumber": 1,
    "startPos": 7,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 1,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;
